--- a/src/component/content/_content-main.scss
+++ b/src/component/content/_content-main.scss
@@ -25,6 +25,7 @@
     }
     &__preview{
         position: relative;
+        max-width: 100%;
     }
     &__prototype{
         position: relative;
@@ -35,7 +36,7 @@
         z-index: 2;
 
         bottom: $spacer;
-        right: 0;
+        right: $grid-gutter-width/2;
 
         box-shadow: 4px 0 8px rgba(0, 0, 0, 0.5);
     }
