--- a/src/component/framework/_container.scss
+++ b/src/component/framework/_container.scss
@@ -1,8 +1,8 @@
 .container {
   width: 100%;
   max-width: map-get($container-max-widths, 'xl');
-  padding-right: $spacer;
-  padding-left: $spacer/2;
+  padding-right: $grid-gutter-width;
+  padding-left: $grid-gutter-width/2;
   margin-right: auto;
   margin-left: auto;
 
@@ -13,8 +13,8 @@
 .row{
   display: flex;
   flex-wrap: wrap;
-  margin-right: -($spacer/2);
-  margin-left: -($spacer/2);
+  margin-right: -($grid-gutter-width/2);
+  margin-left: -($grid-gutter-width/2);
 }
 .no-gutters {
   margin-right: 0;
