--- a/src/component/modal/_modal.scss
+++ b/src/component/modal/_modal.scss
@@ -1,9 +1,12 @@
 .modal{
     display: none;
 
-    // width: 720px;
+    width: 720px;
     max-width: 100%;
     // max-height: 80vh;
 }
 
-.modal.fancybox-content{}
+.modal.fancybox-content{
+    padding: $spacer;
+    background: $dark-grey;
+}
