--- a/src/component/service.scss
+++ b/src/component/service.scss
@@ -1,6 +1,13 @@
 @import "variable";
 
 @import "item/item";
+@import "item/item_advantage";
+@import "item/item_price";
 
 @import "content/content-main";
 @import "content/content-compare";
+@import "content/content-intro";
+@import "content/content-form";
+
+@import "blog/blog";
+@import "blog/blog_preview";
