--- a/src/component/style.scss
+++ b/src/component/style.scss
@@ -24,9 +24,9 @@
 @import "footer/footer";
 
 @import "modal/modal";
+@import "modal/modal_form";
 
 @import "pagination/pagination";
 
 @import "navbar/navbar";
 @import "navbar/navbar_header";
-@import "navbar/navbar_footer";
