--- a/src/component/_variable.scss
+++ b/src/component/_variable.scss
@@ -1,13 +1,13 @@
 $white                : #ffffff;
 $black                : #242424;
-$red                  : #EF002B;
+$red                  : #c62024;
 $green                : #c1ea1d;
 
 $light-grey           : #e7e7e7;
 $grey                 : #a7a7a7;
 $dark-grey            : #2b2b2b;
 
-$border-color         : #464851;
+$border-color         : #3e3e3e;
 $body-color           : $white;
 $body-bg              : $black;
 
@@ -45,9 +45,8 @@ $font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas,   "Liberation M
 $font-size: (
   xs: 0,
   sm: 13px,
-  md: 14px,
-  lg: 15px,
-  // xl: 16px
+  xl: 14px,
+  hd: 15px
 ) !default;
 
 $font-weight-heading: 700;
@@ -57,7 +56,7 @@ $font-weight        : 400;
 $font-weight-bolder : 600;
 $font-weight-bold   : 800;
 
-$line-height        : 1.6;
+$line-height        : 1.5;
 $line-height-heading: 1.1;
 
 $dt-font-weight: $font-weight-bold !default;
