--- a/src/component/btn/_btn.scss
+++ b/src/component/btn/_btn.scss
@@ -14,7 +14,7 @@
     transition: all .4s;
 
     &__icon{
-        margin-left: 6px;
+        margin-left: 10px;
     }
 
     &:hover, &:focus{
@@ -23,5 +23,9 @@
 
     &--full{
         width: 100%;
+    }
+    &--has-icon{
+        display: inline-flex;
+        align-items: center;
     }
 }
