--- a/src/component/content/_content-compare.scss
+++ b/src/component/content/_content-compare.scss
@@ -1,3 +1,11 @@
 .content-compare{
-    
+    padding: 0 0 map-get($map: $spacers, $key: 4);
+
+    &__image{
+        width: 100%;
+        height: 480px;
+        max-height: 100vh;
+
+        background: no-repeat top center / cover;
+    }
 }
