--- a/src/component/framework/_container.scss
+++ b/src/component/framework/_container.scss
@@ -1,13 +1,13 @@
 .container {
   width: 100%;
   max-width: map-get($container-max-widths, 'xl');
-  padding-right: $grid-gutter-width;
+  padding-right: 2*$grid-gutter-width;
   padding-left: $grid-gutter-width/2;
   margin-right: auto;
   margin-left: auto;
 
   &__inner{
-    margin-left: calc(100%/13);
+    margin-left: 120px;
   }
 }
 .row{
