--- a/src/component/framework/_framework.scss
+++ b/src/component/framework/_framework.scss
@@ -1,9 +1,12 @@
 html,body {
-    font-size: map-get($font-size, 'lg');
+    font-size: map-get($font-size, 'hd');
     font-weight: $font-weight-base;
     line-height: $line-height;
     box-sizing: border-box;
     -ms-overflow-style: scrollbar;
+    &.hidden{
+        overflow: hidden;
+    }
 }
 *,
 *::before,
@@ -20,7 +23,7 @@ h1, h2, h3, h4, h5, h6,
 }
 * + h1, * + h2, * + h3, * + h4, * + h5, * + h6,
 * + .h1, * + .h2, * + .h3, * + .h4, * + .h5, * + .h6{
-    margin-top: map-get($spacers, 1);
+    margin-top: map-get($spacers, 3);
 }
 .h1,h1{font-size: 48px;}
 .h2,h2{font-size: 40px;}
@@ -32,14 +35,17 @@ h1, h2, h3, h4, h5, h6,
 p {
     font-size: 1rem;
     margin-top: 0;
-    margin-bottom: map-get($spacers, 1);
+    margin-bottom: map-get($spacers, 2);
     &:last-child{
         margin-bottom: 0;
     }
 }
 ol, ul{
     padding: 0;
-    margin-bottom: map-get($spacers, 1);
+    margin-bottom: map-get($spacers, 2);
+    &:last-child{
+        margin-bottom: 0;
+    }
 }
 a{
     display: inline-block;
@@ -53,11 +59,6 @@ a{
         outline: none;
     }
 }
-table{
-    td{
-        padding: 8px 15px;
-    }
-}
 .link-inverse{
     color: $link-hover-color;
     &:hover{
@@ -65,8 +66,30 @@ table{
     }
 }
 
+table{
+    td{
+        padding: 8px 15px;
+    }
+}
 .bg-black{background-color: $black;}
 .bg-white{background-color: $white;}
+.bg-grey{background-color: $dark-grey;}
+
+.overlay{
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: 101;
+
+    background: rgba(0,0,0,.4);
+
+    &--disable{
+        position: inherit;
+        display: none;
+    }
+}
 
 .p-relative{position: relative;}
 .p-sticky{position: sticky; top: 0; left: 0; z-index: 101;}
@@ -82,6 +105,7 @@ table{
 .text-black{color: $black;}
 .text-green{color: $green;}
 .text-light{color: $light-grey;}
+.text-grey{color: $grey;}
 
 .text-uppercase{text-transform: uppercase;}
 .text-bold,strong,b{font-weight: 700;}
@@ -109,6 +133,9 @@ table{
 
 
 @media all and (max-width: map-get($grid-breakpoints, 'xl')){
+    html,body {
+        font-size: map-get($font-size, 'xl');   
+    }
     .d-xl{
         &-flex{display: flex;}
         &-none{display: none;}
@@ -121,7 +148,7 @@ table{
     }
 }
 @media all and (max-width: map-get($grid-breakpoints, 'lg')){
-    html,body {font-size: map-get($font-size, 'lg');}
+    // html,body {font-size: map-get($font-size, 'lg');}
     
     .d-lg{
         &-flex{display: flex;}
@@ -136,7 +163,7 @@ table{
     }
 }
 @media all and (max-width: map-get($grid-breakpoints, 'md')){
-    html,body {font-size: map-get($font-size, 'md');}
+    // html,body {font-size: map-get($font-size, 'md');}
 
     .d-md{
         &-flex{display: flex;}
