--- a/src/component/framework/_offset.scss
+++ b/src/component/framework/_offset.scss
@@ -4,6 +4,7 @@
     &-2{margin-top: map-get($spacers, 2);}
     &-3{margin-top: map-get($spacers, 3);}
     &-4{margin-top: map-get($spacers, 4);}
+    &-5{margin-top: map-get($spacers, 5);}
 }
 .mb{
     &-0{margin-bottom: map-get($spacers, 0);}
@@ -11,6 +12,7 @@
     &-2{margin-bottom: map-get($spacers, 2);}
     &-3{margin-bottom: map-get($spacers, 3);}
     &-4{margin-bottom: map-get($spacers, 4);}
+    &-5{margin-bottom: map-get($spacers, 5);}
 }
 .pt{
     &-0{padding-top: map-get($spacers, 0);}
@@ -18,6 +20,7 @@
     &-2{padding-top: map-get($spacers, 2);}
     &-3{padding-top: map-get($spacers, 3);}
     &-4{padding-top: map-get($spacers, 4);}
+    &-5{padding-top: map-get($spacers, 5);}
 }
 .pb{
     &-0{padding-bottom: map-get($spacers, 0);}
@@ -25,6 +28,7 @@
     &-2{padding-bottom: map-get($spacers, 2);}
     &-3{padding-bottom: map-get($spacers, 3);}
     &-4{padding-bottom: map-get($spacers, 4);}
+    &-5{padding-bottom: map-get($spacers, 5);}
 }
 @media all and (max-width: map-get($grid-breakpoints, 'xl')){
     .mt-xl{
