--- a/src/component/item/_item.scss
+++ b/src/component/item/_item.scss
@@ -9,8 +9,13 @@
             padding-left: 34px;
         }
     }
+    &__subtitle{
+        line-height: 1.3;
+        font-weight: $font-weight-bold;
+    }
     &__icon{
         width: 24px;
+        
         &_inside-title{
             position: absolute;
             left: 0;
@@ -20,5 +25,13 @@
     }
     &__intro{
         color: $grey;
+    }
+    &__preview{
+        transition: .4s;
+        filter: grayscale(1);
+
+        &:hover, &:focus{
+            filter: grayscale(0);
+        }
     }
 }
