--- a/src/component/footer/footer.pug
+++ b/src/component/footer/footer.pug
@@ -1,7 +1,7 @@
 footer.container
     .footer.container__inner
         .row
-            .col-4
+            .col-4.col-xs-12
                 //- Logo
                 a(href="https://websoho.ru/" alt="" title="")
                     svg.footer__logo(viewBox="0 0 320 80" preserveAspectRatio="xMidYMin meet" x="0px" y="0px")
@@ -20,24 +20,24 @@ footer.container
                 //- Copyright
                 .footer__copyright 2018-2020 © websoho.ru. Все права защищены. 
                     a.text-underline(href="#") Оферта.
-            .col-4
+            .col-4.col-xs-12
                 p.footer__title Основные услуги
                 .row
-                    .col-6
+                    .col-6.col-xs-12
                         a.footer__link(href="#") Сайт под ключ
                         a.footer__link(href="#") Верстка и разработка
                         a.footer__link(href="#") Графический дизайн
                         a.footer__link(href="tilda.html") Сайт на Tilda
-                    .col-6
+                    .col-6.col-xs-12
                         a.footer__link(href="#") Интернет-маркетинг
                         a.footer__link(href="#") Контекстная реклама
                         a.footer__link(href="#") SEO-продвижение
-            .col-2
+            .col-2.col-xs-12
                 p.footer__title Блог
                 a.footer__link(href="#") Фриланс = акуна матата?
                 a.footer__link(href="#") Пересядь с иглы плохой рекламы
                 a.footer__link(href="#") Играл со шрифтом в дизайне: проиграл
-            .col-2
+            .col-2.col-xs-12
                 p.footer__title Портфолио
                 a.footer__link(href="#") Сайт для «ДИФ Строй-Инжиниринг»
                 a.footer__link(href="#") Вывод сайта в ТОП-10 по высокочастотным запросам
