--- a/public/css/service.css
+++ b/public/css/service.css
@@ -28,7 +28,7 @@
 }
 
 .item__intro {
-  color: #a7a7a7;
+  color: #d5d5d5;
 }
 
 .item__preview {
@@ -37,11 +37,15 @@
   transition: .4s;
   -webkit-filter: grayscale(1);
   filter: grayscale(1);
+  cursor: pointer;
 }
 
 .item__preview:hover, .item__preview:focus {
   -webkit-filter: grayscale(0);
   filter: grayscale(0);
+  -webkit-transform: scale(0.95);
+  -ms-transform: scale(0.95);
+  transform: scale(0.95);
 }
 
 .item_advantage {
@@ -56,7 +60,7 @@
 }
 
 .item_advantage__title--inverse {
-  color: #a7a7a7;
+  color: #d5d5d5;
 }
 
 .item_advantage__positive {
@@ -196,7 +200,7 @@
 }
 
 .content-main__intro {
-  width: 520px;
+  width: 380px;
   max-width: 90%;
   color: #e7e7e7;
 }
@@ -208,9 +212,10 @@
 
 .content-main__action-main {
   position: absolute;
-  bottom: -62px;
-  left: 152px;
-  width: 600px;
+  bottom: -70px;
+  left: 170px;
+  width: 570px;
+  z-index: -1;
 }
 
 .content-main__preview {
@@ -221,6 +226,8 @@
 .content-main__prototype {
   position: relative;
   z-index: 1;
+  width: 300px;
+  max-width: 100%;
 }
 
 .content-main__example {
@@ -228,12 +235,30 @@
   z-index: 2;
   bottom: 40px;
   right: 15px;
+  width: 460px;
   -webkit-box-shadow: 4px 0 8px rgba(0, 0, 0, 0.5);
   box-shadow: 4px 0 8px rgba(0, 0, 0, 0.5);
 }
 
+.content-main__sale {
+  position: absolute;
+  z-index: 3;
+  bottom: -40px;
+  left: -40px;
+  width: 160px;
+  -webkit-transform: rotate(-15deg);
+  -ms-transform: rotate(-15deg);
+  transform: rotate(-15deg);
+}
+
+@media all and (max-width: 576px) {
+  .content-main__action-main {
+    display: none;
+  }
+}
+
 .content-compare {
-  padding: 0 0 60px;
+  padding: 0 0 80px;
 }
 
 .content-compare__image {
@@ -253,7 +278,7 @@
 
 .content-form__intro {
   max-width: calc(100% - 40px);
-  color: #a7a7a7;
+  color: #d5d5d5;
 }
 
 .content-form__form {
@@ -272,7 +297,7 @@
 }
 
 .content-form__animation:hover #path, .content-form__animation:focus #path {
-  stroke: #a7a7a7;
+  stroke: #d5d5d5;
 }
 
 .content-form__animation:hover #elem, .content-form__animation:focus #elem {
@@ -299,12 +324,12 @@
 
 .blog__item-data {
   font-size: 12px;
-  color: #a7a7a7;
+  color: #d5d5d5;
 }
 
 .blog__item-intro {
   font-size: 12px;
-  color: #a7a7a7;
+  color: #d5d5d5;
   margin-bottom: 10px;
 }
 
@@ -340,4 +365,17 @@
 
 .blog_preview__image--full {
   grid-column: 1/3;
+}
+
+@media all and (max-width: 576px) {
+  .blog_preview {
+    display: block;
+  }
+  .blog_preview__item {
+    display: block;
+    margin-bottom: 40px;
+  }
+  .blog_preview__image {
+    margin-bottom: 20px;
+  }
 }
