--- a/src/component/_variable.scss
+++ b/src/component/_variable.scss
@@ -4,7 +4,7 @@ $red                  : #c62024;
 $green                : #c1ea1d;
 
 $light-grey           : #e7e7e7;
-$grey                 : #a7a7a7;
+$grey                 : #d5d5d5;
 $dark-grey            : #2b2b2b;
 
 $border-color         : #3e3e3e;
@@ -43,7 +43,7 @@ $font-family-base     : "Open Sans", "Helvetica Neue", Arial,  sans-serif, "Appl
 $font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas,   "Liberation Mono",   "Courier New",    monospace !default;
 
 $font-size: (
-  xs: 0,
+  xs: 12px,
   sm: 13px,
   xl: 14px,
   hd: 15px
@@ -56,7 +56,7 @@ $font-weight        : 400;
 $font-weight-bolder : 600;
 $font-weight-bold   : 800;
 
-$line-height        : 1.5;
+$line-height        : 1.7;
 $line-height-heading: 1.1;
 
 $dt-font-weight: $font-weight-bold !default;
