--- a/src/component/blog/_blog_preview.scss
+++ b/src/component/blog/_blog_preview.scss
@@ -12,6 +12,7 @@
         grid-auto-rows: minmax(120px, auto);
 
         margin-bottom: map-get($map: $spacers, $key: 2);
+        
         &--full{
             grid-row: 1/3;
             display: block;
@@ -27,6 +28,21 @@
 
         &--full{
             grid-column: 1/3;
+        }
+    }
+}
+
+
+@media all and (max-width: map-get($grid-breakpoints, 'xs')){
+    .blog_preview{
+        display: block;
+
+        &__item{
+            display: block;
+            margin-bottom: map-get($map: $spacers, $key: 3);
+        }
+        &__image{
+            margin-bottom: $spacer/2;
         }
     }
 }
