--- a/src/component/content/_content-main.scss
+++ b/src/component/content/_content-main.scss
@@ -8,19 +8,20 @@
         max-width: 100%;
     }
     &__intro{
-        width: 520px;
+        width: 380px;
         max-width: 90%;
         color: $light-grey;
     }
     &__action{
         position: relative;
         padding: map-get($map: $spacers, $key: 4) 0 map-get($map: $spacers, $key: 2);
-
+        
         &-main{
             position: absolute;
-            bottom: -62px;
-            left: 152px;
-            width: 600px;
+            bottom: -70px;
+            left: 170px;
+            width: 570px;
+            z-index: -1;
         }
     }
     &__preview{
@@ -30,6 +31,9 @@
     &__prototype{
         position: relative;
         z-index: 1;
+
+        width: 300px;
+        max-width: 100%;
     }
     &__example{
         position: absolute;
@@ -38,6 +42,28 @@
         bottom: $spacer;
         right: $grid-gutter-width/2;
 
+        width: 460px;
+
         box-shadow: 4px 0 8px rgba(0, 0, 0, 0.5);
+    }
+    &__sale{
+        position: absolute;
+        z-index: 3;
+
+        bottom: -$spacer;
+        left: -$spacer;
+
+        width: 160px;
+        transform: rotate(-15deg);
+    }
+}
+
+@media all and (max-width: map-get($grid-breakpoints, 'xs')){
+    .content-main{
+        &__action{
+            &-main{
+                display: none;
+            }
+        }
     }
 }
