--- a/src/tilda.pug
+++ b/src/tilda.pug
@@ -22,17 +22,21 @@ html(lang="ru")
                                 | овый сайт на 
                                 span.text-green Tilda 
                                 | за&nbsp;3&nbsp;дня и&nbsp;15к+
-                            p.content-main__intro Спроектируем сайт, напишем тексты, разработаем дизайн и запустим проект. От 3 дней и 15 000 рублей. Получите консультацию и расчет стоимости за Ваш сайт.
+                            p.content-main__intro Акционная стоимость действует  
+                                span.text-green.text-bold до 1 января 2021
+                                | . Оставьте заявку сегодня и цена для вас будет 
+                                span.text-green.text-bold зафиксирована навсегда.
                             .content-main__action
-                                a.btn(data-fancybox data-src="#hidden-form" href="javascript:;") Заполнить бриф
+                                a.btn.btn_secondary(data-fancybox data-src="#hidden-form" href="javascript:;") Зафиксировать стоимость
                                 <svg class="content-main__action-main" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 595 400" xml:space="preserve">
                                     <path fill="none" stroke="#C1EA1D" stroke-width="5" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M26,327.4c0,0,65.5,45.8,131.1,41.4c88-5.9,126.3-128.5,190.1-149.5c64.6-21.3,193.3,27.3,229.8-15.2c36.8-42.9-20.9-109.8-17.4-160.3c2.3-33.2,27.6-40.3,27.6-40.3"/>
-                                    <path fill="#C1EA1D" d="M3.9,310.2l2,5l2.6-2.6l4.4,3.5L16,302l-16,6.7L3.9,310.2z M11.5,306l-4.9,4.5L6,312.8L4.8,310L11.5,306z"/>
+                                    <!-- <path fill="#C1EA1D" d="M3.9,310.2l2,5l2.6-2.6l4.4,3.5L16,302l-16,6.7L3.9,310.2z M11.5,306l-4.9,4.5L6,312.8L4.8,310L11.5,306z"/> -->
                                 </svg>
                         .col-5
                             .content-main__image
+                                img.content-main__sale(src="../demo/sale.png" alt="" title="")
                                 img.content-main__prototype(src="../demo/prototype.png" alt="" title="")
-                                img.content-main__example(src="../demo/example.png" alt="" title="")
+                                img.content-main__example(src="../demo/first-screen.png" alt="" title="")
                     //- Step & item
                     .row.pt-5.pb-3
                         .col-4
@@ -124,30 +128,30 @@ html(lang="ru")
                                             path(d="M15.5,65.7C9.3,60.1,4.7,52.8,2.8,44.5C1.3,38.5,2,35.1,2,35.1c1.2-13.6,10.8-24.9,24.1-24.9c8.3,0,15.2,4.4,19.4,11l0,0L31.8,41.2l26.7,3.6L37.5,64L53,73.7l-6.7,20L15.5,65.7z M97.1,44.5c-1.9,8.3-6.5,15.6-12.7,21.2L54.9,92l6.6-19.9l-13.9-8.7l23.2-21.3l-28.6-3.8c0,0,6.3-11.2,8.7-14.7c5.1-7.8,12.5-13.4,21.8-13.4c13.3,0,23.9,11.4,25.1,24.9C97.9,35.1,98.5,38.5,97.1,44.5z")
                                         .item_advantage__title.item_advantage__title--inverse Стоимость <br/>и объем хостинга
                 //- Portfolio
-                .row.pb-2
-                    .col-4
+                .row.pb-3
+                    .col-4.col-xs-12
                         h2.h1
                             span.text-green Когда 
                             | стоит выбрать Tilda?
                 .row.pb-4
-                    .col-4.mb-2
+                    .col-4.mb-2.col-xs-12
+                        .item
+                            p.item__subtitle Разработка <br/>промо-страницы
+                            p.item__intro Нужен простой, удобный, но полноценный адаптивный сайт с современным дизайном. Важна возможность красиво подавать контент.
+                            img.img-fluid.item__preview(src="../demo/promo-page.jpg")
+                    .col-4.mb-2.col-xs-12
                         .item
                             p.item__subtitle Сайт-визитка <br/>или корпоративный сайт
                             p.item__intro Нужен простой, удобный, но полноценный адаптивный сайт с современным дизайном. Важна возможность красиво подавать контент.
-                            img.img-fluid.item__preview(src="../demo/example.png")
-                    .col-4.mb-2
+                            img.img-fluid.item__preview(src="../demo/corp-page.jpg")
+                    .col-4.mb-2.col-xs-12
                         .item
-                            p.item__subtitle Сайт-визитка <br/>или корпоративный сайт
+                            p.item__subtitle Небольшой <br/>магазин или каталог
                             p.item__intro Нужен простой, удобный, но полноценный адаптивный сайт с современным дизайном. Важна возможность красиво подавать контент.
-                            img.img-fluid.item__preview(src="../demo/example.png")
-                    .col-4.mb-2
-                        .item
-                            p.item__subtitle Сайт-визитка <br/>или корпоративный сайт
-                            p.item__intro Нужен простой, удобный, но полноценный адаптивный сайт с современным дизайном. Важна возможность красиво подавать контент.
-                            img.img-fluid.item__preview(src="../demo/example.png")
+                            img.img-fluid.item__preview(src="../demo/store-page.jpg")
                 //- Price
                 .row.pt-2.pb-2
-                    .col-4.text-grey
+                    .col-4.text-grey.col-xs-12
                         h4.text-white.mb-3 Сделаем всё  
                             span.d-block качественно и&nbsp;в&nbsp;срок
                                 span.text-green .
@@ -155,7 +159,7 @@ html(lang="ru")
                             p 1. Заключаем официальный договор. Указываем сроки, перечень услуг и стоимость. Подписываем договор в двух экземплярах. 
                             p 2. Оплата сайта только после сдачи (50% — предоплата по счету через банк, 50% — оплата после окончательной сдачи сайта)
                             p 3. Сроки прописываем в приложении к договору.
-                    .col-8
+                    .col-8.col-xs-12
                         .item.item_price.item_price-promo.mb-2(data-fancybox="promo" data-src="#promo")
                             .item_price__content
                                 p.item_price__title Promo
@@ -187,7 +191,7 @@ html(lang="ru")
             //- Contact Form
             aside.container__inner.content-form
                 .row
-                    .col-8
+                    .col-8.col-xs-12
                         h4.h3
                             span.text-green Pro
                             | консультируем бесплатно. 
@@ -213,7 +217,7 @@ html(lang="ru")
                                 a.btn.btn--has-icon(type="submit") Обсудить проект
                                     svg.btn__icon(xmlns="http://www.w3.org/2000/svg" viewBox="0 -31 512 512" width="16px" height="16px")
                                         path(fill="#c1ea1d" d="m123.195312 260.738281 63.679688 159.1875 82.902344-82.902343 142.140625 112.976562 100.082031-450-512 213.265625zm242.5-131.628906-156.714843 142.941406-19.519531 73.566407-36.058594-90.164063zm0 0")
-                    .col-4
+                    .col-4.d-sm-none
                         <svg class="content-form__animation" id="parent" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 500 500" style="enable-background:new 0 0 500 500;" xml:space="preserve">
                             <path id="path" fill="none" stroke="#3e3e3e" stroke-width="2" stroke-dasharray="10" d="M 25, 250 a 225,225 0 1,0 450,0 a 225,225 0 1,0 -450,0"/>
                             <circle id="elem" cx="0" cy="0" r="14" fill="#3e3e3e"/>
@@ -261,6 +265,7 @@ html(lang="ru")
             p.h4.modal_form__title 
                 span.text-green Brief 
                 | на разработку сайта
+            p Заполните бриф сейчас и стоимость сохраниться за вами даже после окончания акционного предложения.
             form.form
                 p.text-small.text-bold Контактные данные
                 .form__group.row
@@ -278,24 +283,23 @@ html(lang="ru")
                 .form__group.row
                     .col-6
                         .checkbox.mb-1
-                            input.checkbox__input#emailType(type="checkbox" name="emailType")
-                            label.checkbox__label(for="emailType") Написать на e-mail
+                            input.checkbox__input#emailTypeBrief(type="checkbox" name="emailType")
+                            label.checkbox__label(for="emailTypeBrief") Написать на e-mail
                         .checkbox
-                            input.checkbox__input#phoneType(type="checkbox" name="phoneType")
-                            label.checkbox__label(for="phoneType") Перезвонить
+                            input.checkbox__input#phoneTypeBrief(type="checkbox" name="phoneType")
+                            label.checkbox__label(for="phoneTypeBrief") Перезвонить
                     .col-6
                         .checkbox.mb-1
-                            input.checkbox__input#messType1(type="checkbox" name="messType1")
-                            label.checkbox__label(for="messType") Telegram
+                            input.checkbox__input#messTypeBrief1(type="checkbox" name="messType1")
+                            label.checkbox__label(for="messType1Brief") Telegram
                         .checkbox
-                            input.checkbox__input#messType2(type="checkbox" name="messType2")
-                            label.checkbox__label(for="messType2") WhatsApp
-                        
+                            input.checkbox__input#messType2Brief(type="checkbox" name="messType2")
+                            label.checkbox__label(for="messType2Brief") WhatsApp
                 .form__group.mt-3
                     button.btn.btn_action(type="submit") Обсудить проект
                     .mt-2.form__agree.checkbox
-                        input.checkbox__input#agreeInline(type="checkbox" name="agreeInline" checked="checked" required="required")
-                        label.checkbox__label(for="agreeInline") согласен с обработкой 
+                        input.checkbox__input#agreeInlineBrief(type="checkbox" name="agreeInline" checked="checked" required="required")
+                        label.checkbox__label(for="agreeInlineBrief") согласен с обработкой 
                             a.form__link-inverse(href="/policy.pdf" target="_blank") персональных данных
         .modal.modal_form#promo
             p.h4.modal_form__title Тариф 
